; ModuleID = '/home/carl/AnghaBench/vlc/src/player/extr_player.c_vlc_player_assert_seek_params.c'
source_filename = "/home/carl/AnghaBench/vlc/src/player/extr_player.c_vlc_player_assert_seek_params.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VLC_PLAYER_SEEK_PRECISE = common dso_local global i32 0, align 4
@VLC_PLAYER_SEEK_FAST = common dso_local global i32 0, align 4
@VLC_PLAYER_WHENCE_ABSOLUTE = common dso_local global i32 0, align 4
@VLC_PLAYER_WHENCE_RELATIVE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @vlc_player_assert_seek_params to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vlc_player_assert_seek_params(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @VLC_PLAYER_SEEK_PRECISE, align 4
  %7 = icmp eq i32 %5, %6
  br i1 %7, label %12, label %8

8:                                                ; preds = %2
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @VLC_PLAYER_SEEK_FAST, align 4
  %11 = icmp eq i32 %9, %10
  br label %12

12:                                               ; preds = %8, %2
  %13 = phi i1 [ true, %2 ], [ %11, %8 ]
  %14 = zext i1 %13 to i32
  %15 = call i32 @assert(i32 %14)
  %16 = load i32, i32* %4, align 4
  %17 = load i32, i32* @VLC_PLAYER_WHENCE_ABSOLUTE, align 4
  %18 = icmp eq i32 %16, %17
  br i1 %18, label %23, label %19

19:                                               ; preds = %12
  %20 = load i32, i32* %4, align 4
  %21 = load i32, i32* @VLC_PLAYER_WHENCE_RELATIVE, align 4
  %22 = icmp eq i32 %20, %21
  br label %23

23:                                               ; preds = %19, %12
  %24 = phi i1 [ true, %12 ], [ %22, %19 ]
  %25 = zext i1 %24 to i32
  %26 = call i32 @assert(i32 %25)
  %27 = load i32, i32* %3, align 4
  %28 = load i32, i32* %4, align 4
  ret void
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
